--- a/src/display/worlds/HelloDomNode/index.css
+++ b/src/display/worlds/HelloDomNode/index.css
@@ -16,6 +16,6 @@ html, body, .HelloDomNode {
     top:30px;
     left:100px;
     width:600px;
-    height:400px;
+    height:350px;
     overflow: visible;
 }
